@@ -1,1 +1,2 @@
 DIST nautilus-3.12.2.tar.xz 4975580 SHA256 969c2bedc324eab7b9399bdb3a7db61f819a2995c733349ded081b059a1cafb1 SHA512 59a80fef3cedff5393061aeead552eec80bbd920ae71b918bb21ca6fc59ba1c4e85c641885a12dde5208345b8659f9d4a6e1ddf865f4cb94afd5a3a339839c01 WHIRLPOOL cc9369b606ee4c6727aba89240a17ef007e26c1c5c6cc54a92cb83d098a51ac1424431462125ba56564cad9e26023c489ada96ff5e6037eaf49537b9e76e49fe
+DIST nautilus-3.14.0.tar.xz 3332224 SHA256 6f909ed9afa9abffe489b80b57888bd7bc7acea2cf48717c54362bd3b6aee0d4 SHA512 114e7edebd84e6c3bdc0afdc2822b80c16d361f8417973eaed7bdd3fe3af239dd2eed3f02657b02142ecee36250cec675849518c688ef40b397e5e9b115d692f WHIRLPOOL c81fcb472c0b4a1b3a9ddb0418dcca1cf6b40f7d37954d98830958aad470972c6fa773e4e48a35c0f16b191a04f4f47c2503c273b8a15850de74563c7c811aab
